models/nvidia_nim/llama3-8b/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama3-8b-instruct
  labels:
    app: llama3-8b-instruct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama3-8b-instruct
  template:
    metadata:
      labels:
        app: llama3-8b-instruct
    spec:
      containers:
      - name: llama3-8b-instruct
        image: nvcr.io/nim/meta/llama-3-8b-instruct:1.12.0
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: llama3-8b-nim-cache
          mountPath: /opt/nim/.cache
        resources:
          limits:
            cpu: "8"
            memory: 24Gi
            nvidia.com/gpu: "1"
          requests:
            cpu: "6"
      volumes:
      - name: llama3-8b-nim-cache
        persistentVolumeClaim:
          claimName: llama3-8b-nim-cache
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      imagePullSecrets:
      - name: nim-pull-secret
