models/nvidia_nim/llama3-8b/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: llama3-8b-instruct
  labels:
    app: llama3-8b-instruct
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llama3-8b-instruct
